--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,22 +1,17 @@
-name: helloworld-evesa
-version: git
-summary: helloworld
-description: >
-  print helloWorld
+name: helloworld-evesa # you probably want to 'snapcraft register <name>'
+base: core18 # the base snap is the execution environment for this snap
+version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
+summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+description: |
+  This is my-snap's description. You have a paragraph or two to tell the
+  most important story about your snap. Keep it under 100 words though,
+  we live in tweetspace and your description wants to look good in the snap
+  store.
 
-grade : devel
-confinement: devmode
-
-base: core 18
+grade: devel # must be 'stable' to release into candidate/stable channels
+confinement: devmode # use 'strict' once you have the right plugs and slots
 
 parts:
-  offlineimap:
-    plugin: python
-    python-version: python3
+  helloworld:
     source: .
-    source-type: git
-    
-
-apps:
-  helloworld-evesa:
-    command: bin/helloworld
+    plugin: python
